# ckw-newsticker

./: pyproject.toml
newsticker/: admin.py  models.py
newsticker/migrations/: 0001_initial.py  0002_alter_tickerref_options.py  0003_alter_tickeritemtype_options_and_more.py  0004_tickeritem_has_summary_alter_tickeritem_summary.py  0005_alter_tickeritem_has_summary.py  0006_tickerref_linked_tickeritem_alter_tickerref_item_and_more.py  0007_tickeritem_refs_in_summary_count_and_more.py  0008_tickerref_text_alter_tickerref_ref_type.py  0009_tickerref_title.py  0010_sharelink_alter_tickeritem_summary.py  0011_sharelink_valid_until.py  0012_sharelink_shared_with_notes_alter_sharelink_short.py
